--- a/src/header/header.css
+++ b/src/header/header.css
@@ -1,12 +1,17 @@
-body {
+main {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    width: 100%;
 }
 
 .header-container {
     padding: 0 20px;
     max-width: 960px;
     margin: 0 auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .logo-box {
