--- a/src/home/home.css
+++ b/src/home/home.css
@@ -1,9 +1,8 @@
 .app {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: #0A0A0A;
     color: white;
-    overflow: hidden;
     position: relative;
     display: flex;
     justify-content: center;
@@ -77,6 +76,7 @@
     /* Or any color you prefer */
     width: 100%;
     height: 100%;
+    padding-bottom: 100px;
 }
 
 .title {
@@ -84,7 +84,7 @@
     position: relative;
     z-index: 1;
     color: blueviolet;
-    padding: 5rem 0 0 5rem;
+    padding: 10rem 0 0 5rem;
 }
 
 .home-text {
@@ -99,4 +99,43 @@
     to {
         opacity: 1;
     }
+}
+
+
+
+.languages-list {
+    padding: 0 4rem 5rem;
+    font-size: 1.5rem;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.language-item {
+    background: #242424;
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.language-item:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.language-icon {
+    margin-right: 10px;
+    color: #007bff;
+    /* Icon color */
+}
+
+.language-name {
+    font-size: 16px;
+    font-weight: bold;
 }
